# heroku-csv2athena_schema

./: .gitignore  Pipfile  README.md  TODO.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: pythonapp.yml
config/: settings.py  urls.py
core/: csv2athena.py
core/templates/core/: ct.sql
core/templates/webapi/: ct.sql
core/templatetags/: sql_tag.py
misc/: sample.csv
templates/: base.html  robots.txt
webapi/: business.py  models.py  serializers.py  urls.py  views.py
webapp/: apps.py  csv2athena.py  forms.py  views.py
webapp/templates/webapp/: index.html  vue-index.html
