[tool.poetry]
name = "csv2athena"
version = "0.1.0"
description = ""
authors = ["Yukihiro Okada <yuokada@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.1.0"
Django = ">=2.2.24,<3.0"
djangorestframework = "<4.0"
django-werkzeug-debugger-runserver = ">=0.3.1"
messytables = "0.15.2"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
django-debug-toolbar = ">=2.1,<3.0"
django-extensions = ">=2.1.6"
ipython = "^7.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
